--- a/Posetrix/Views/WIndows/FoldersAddWindow.xaml
+++ b/Posetrix/Views/WIndows/FoldersAddWindow.xaml
@@ -75,7 +75,7 @@
                 VerticalAlignment="Center"
                 Command="{Binding OpenFolderCommand}"
                 Content="&#xE710;"
-                FontFamily="{StaticResource SegoeUIIcons}"
+                FontFamily="{StaticResource SegoeUiIcons}"
                 FontSize="16">
                 <Button.ToolTip>
                     <ToolTip>
@@ -96,7 +96,7 @@
                 Command="{Binding RemoveFolderCommand}"
                 CommandParameter="{Binding SelectedFolder}"
                 Content="&#xE738;"
-                FontFamily="{StaticResource SegoeUIIcons}"
+                FontFamily="{StaticResource SegoeUiIcons}"
                 FontSize="16">
                 <Button.ToolTip>
                     <ToolTip>
