--- a/Posetrix.Avalonia/App.axaml
+++ b/Posetrix.Avalonia/App.axaml
@@ -3,12 +3,14 @@
              x:Class="Posetrix.Avalonia.App"
              xmlns:local="using:Posetrix.Avalonia"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <local:ViewLocator />
     </Application.DataTemplates>
-  
+    <Application.Resources>
+        <FontFamily x:Key="UbuntuFont">avares://Posetrix.Avalonia/Assets/Fonts#Ubuntu</FontFamily>
+    </Application.Resources>
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
