--- a/Posetrix.Avalonia/Views/FolderAddWindow.axaml
+++ b/Posetrix.Avalonia/Views/FolderAddWindow.axaml
@@ -8,17 +8,37 @@
         Width="600"
         Height="400"
         MinWidth="600"
-        MinHeight="400"
-        >
+        MinHeight="400">
+    <Window.Styles>
+        <Style Selector="TextBlock.list">
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="FontFamily" Value="{StaticResource UbuntuFont}" />
+        </Style>
+    </Window.Styles>
     <Grid RowDefinitions="8*,Auto" Margin="20">
         <ListBox Grid.Row="0">
             <ListBox.Items>
-                <ListBoxItem Content="Folder 1" FontFamily="{StaticResource UbuntuFont}"/>
-                <ListBoxItem Content="Folder 2" FontFamily="{StaticResource UbuntuFont}"/>
-                <ListBoxItem Content="Folder 3" FontFamily="{StaticResource UbuntuFont}"/>
+                <ListBoxItem>
+                    <StackPanel>
+                        <TextBlock Classes="list">Folder name</TextBlock>
+                        <TextBlock Classes="list">Folder path</TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel>
+                        <TextBlock Classes="list">Folder name</TextBlock>
+                        <TextBlock Classes="list">Folder path</TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel>
+                        <TextBlock Classes="list">Folder name</TextBlock>
+                        <TextBlock Classes="list">Folder path</TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
             </ListBox.Items>
         </ListBox>
-        <Grid Grid.Row="1" ColumnDefinitions="*,*">
+        <Grid Grid.Row="1" ColumnDefinitions="*,*" Margin="0 20 0 0">
             <Button
                 Name="AddFolder"
                 Grid.Column="0"
