--- a/Posetrix.Avalonia/Views/MainWindow.axaml
+++ b/Posetrix.Avalonia/Views/MainWindow.axaml
@@ -3,6 +3,9 @@
         xmlns:vm="using:Posetrix.Avalonia.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:svg="using:Avalonia.Svg"
+        xmlns:lucideAvalonia="clr-namespace:LucideAvalonia;assembly=LucideAvalonia"
+        xmlns:i="https://github.com/projektanker/icons.avalonia"
         xmlns:cc="using:Posetrix.Avalonia.Controls"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
         x:Class="Posetrix.Avalonia.Views.MainWindow"
@@ -17,17 +20,24 @@
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
-     <Grid Margin="20">
+
+    <Grid Margin="20">
         <Grid RowDefinitions="Auto, 4*, 2*, 2*, Auto" ShowGridLines="True">
             <Grid RowDefinitions="*,*,*">
                 <Grid ColumnDefinitions="*,*">
-                    <Button Grid.Column="0" Click="OpenSettingsButton_OnClick" Name="OpenSettingsButton" Width="28" Height="28" Content="S"></Button>
+                    <Button Grid.Column="0" Click="OpenSettingsButton_OnClick" Name="OpenSettingsButton" Width="28"
+                            Height="28">
+                        <lucideAvalonia:Lucide Icon="Settings" Width="16" Height="16" StrokeBrush="{DynamicResource SystemControlForegroundBaseHighBrush}"></lucideAvalonia:Lucide>
+                    </Button>
                     <TextBlock Grid.Column="1" FontFamily="{StaticResource UbuntuFont}">Add your reference images</TextBlock>
                 </Grid>
-                <Button Grid.Row="1" Name="AddFolderButton" Click="AddFolderButton_OnClick" Height="46" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"
-                        VerticalContentAlignment="Center" Content="Add">
+                <Button Grid.Row="1" Name="AddFolderButton" Click="AddFolderButton_OnClick" Height="46"
+                        HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center" Margin="0 10">
+                    <lucideAvalonia:Lucide Icon="Plus" StrokeThickness="1.5" StrokeBrush="{DynamicResource SystemControlForegroundBaseHighBrush}"></lucideAvalonia:Lucide>
+                    <!-- <svg:Svg Path="avares://Posetrix.Avalonia/Assets/Icons/settings.svg" Width="28" Height="28"/> -->
                 </Button>
                 <TextBlock Grid.Row="2" HorizontalAlignment="Center" Text="Folders: 0 Files: 0"></TextBlock>
             </Grid>
@@ -48,7 +58,8 @@
                 <TextBlock Text="Shuffle images" VerticalAlignment="Center"></TextBlock>
                 <CheckBox IsChecked="True"></CheckBox>
             </UniformGrid>
-            <Button Grid.Row="4" Name="StartNewSession" Click="StartNewSession_OnClick" HorizontalAlignment="Stretch" Height="46" Content="Start a drawing session"
+            <Button Grid.Row="4" Name="StartNewSession" Click="StartNewSession_OnClick" HorizontalAlignment="Stretch"
+                    Height="46" Content="Start a drawing session"
                     VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
             </Button>
         </Grid>
