--- a/Posetrix.Avalonia/Views/SessionWindow.axaml
+++ b/Posetrix.Avalonia/Views/SessionWindow.axaml
@@ -2,40 +2,79 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:lucideAvalonia="clr-namespace:LucideAvalonia;assembly=LucideAvalonia"
         mc:Ignorable="d"
         x:Class="Posetrix.Avalonia.Views.SessionWindow"
         Title="Session"
         Width="600"
         Height="450">
-    <Grid RowDefinitions="Auto, 10*, Auto, Auto">
+    <Window.Styles>
+        <Style Selector="lucideAvalonia|Lucide">
+            <!-- Dynamic icons color -->
+            <Setter Property="StrokeBrush" Value="{DynamicResource SystemControlForegroundBaseHighBrush}" />
+        </Style>
+        <Style Selector="Button.big">
+            <Setter Property="Width" Value="50" />
+            <Setter Property="Height" Value="50" />
+            <Setter Property="Margin" Value="4 0" />
+        </Style>
+        <Style Selector="Button.small">
+            <Setter Property="Width" Value="32" />
+            <Setter Property="Height" Value="32" />
+            <Setter Property="Margin" Value="4 0" />
+        </Style>
+    </Window.Styles>
+
+    <Grid RowDefinitions="Auto, 10*, Auto, Auto" Margin="20" ShowGridLines="True">
         <UniformGrid Grid.Row="0" Columns="2">
             <TextBlock Text="Session Info" />
             <TextBlock HorizontalAlignment="Right" Text="HH:MM:SS" />
         </UniformGrid>
         <Image Grid.Row="1" Stretch="Uniform" Source="/Assets/Enthusiastic-rafiki.png"></Image>
+        <!-- Image editing buttons -->
         <StackPanel
             Grid.Row="2"
             Margin="0,10"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Orientation="Horizontal">
-            <Button Content="Always on top"></Button>
-            <Button Content="Grid"></Button>
-            <Button Content="Mirror"></Button>
-            <Button Content="Timer"></Button>
-            <Button Content="Black and white"></Button>
+            <Button Classes="small">
+                <lucideAvalonia:Lucide Icon="Pin" Width="16"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="small">
+                <lucideAvalonia:Lucide Icon="Grid3X3" Width="16"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="small">
+                <lucideAvalonia:Lucide Icon="FlipHorizontal" Width="16"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="small">
+                <lucideAvalonia:Lucide Icon="Timer" Width="16"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="small">
+                <lucideAvalonia:Lucide Icon="CircleSlash" Width="16"></lucideAvalonia:Lucide>
+            </Button>
         </StackPanel>
+        <!-- Control buttons. -->
         <StackPanel
             Grid.Row="3"
-            Margin="0,10"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Orientation="Horizontal">
-            <Button Content="Previous"></Button>
-            <Button Content="Pause"></Button>
-            <Button Content="Stop"></Button>
-            <Button Content="Next"></Button>
-            <Button Content="Remove"></Button>
+            <Button Classes="big">
+                <lucideAvalonia:Lucide Icon="ChevronLeft"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="big">
+                <lucideAvalonia:Lucide Icon="Pause"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="big">
+                <lucideAvalonia:Lucide Icon="Square"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="big">
+                <lucideAvalonia:Lucide Icon="ChevronRight"></lucideAvalonia:Lucide>
+            </Button>
+            <Button Classes="big">
+                <lucideAvalonia:Lucide Icon="ChevronLast"></lucideAvalonia:Lucide>
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
