--- a/Posetrix.Avalonia/Views/MainWindow.axaml
+++ b/Posetrix.Avalonia/Views/MainWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:Posetrix.Avalonia.ViewModels"
+        xmlns:vm="using:Posetrix.Core.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:svg="using:Avalonia.Svg"
@@ -59,7 +59,7 @@
             </UniformGrid>
             <UniformGrid Grid.Row="3">
                 <TextBlock Text="Shuffle images" VerticalAlignment="Center"></TextBlock>
-                <CheckBox IsChecked="True"></CheckBox>
+                <CheckBox IsChecked="{Binding IsShuffleEnabled}"></CheckBox>
             </UniformGrid>
             <Button Grid.Row="4" Name="StartNewSession" Click="StartNewSession_OnClick" HorizontalAlignment="Stretch"
                     Height="46" Content="Start a drawing session"
