--- a/Posetrix.Avalonia/Views/SettingsWindow.axaml
+++ b/Posetrix.Avalonia/Views/SettingsWindow.axaml
@@ -2,11 +2,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="using:Posetrix.Core.ViewModels"
+        xmlns:viewModels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
         mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="400"
         x:Class="Posetrix.Avalonia.Views.SettingsWindow"
-        Title="Settings"
         Width="480"
-        Height="400">
+        Height="400"
+        Icon="/Assets/avalonia-logo.ico"
+        Title="{Binding WindowTitle}"
+        x:DataType="viewModels:SettingsWindowViewModel">
+    <Design.DataContext>
+        <!-- This only sets the DataContext for the previewer in an IDE,
+             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
+        <vm:SettingsWindowViewModel />
+    </Design.DataContext>
     <Grid Margin="20">
         <Grid RowDefinitions="*,*,*,*,*">
             <Grid Grid.Row="0">
@@ -15,14 +24,19 @@
                     Text="App theme" />
                 <ComboBox
                     Name="ChangeTheme"
+                    ItemsSource="{Binding Themes}"
+                    SelectedItem="{Binding SelectedTheme}"
+                    DisplayMemberBinding=""
                     SelectionChanged="ChangeTheme_OnSelectionChanged"
                     HorizontalAlignment="Right"
                     MinWidth="200"
                     VerticalAlignment="Center"
                     SelectedIndex="0">
-                    <ComboBoxItem Content="System" />
-                    <ComboBoxItem Content="Light" />
-                    <ComboBoxItem Content="Dark" />
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
                 </ComboBox>
             </Grid>
             <Grid Grid.Row="1">
