--- a/Posetrix.Avalonia/Views/SettingsWindow.axaml
+++ b/Posetrix.Avalonia/Views/SettingsWindow.axaml
@@ -10,11 +10,11 @@
         Height="400"
         Icon="/Assets/avalonia-logo.ico"
         Title="{Binding WindowTitle}"
-        x:DataType="viewModels:SettingsWindowViewModel">
+        x:DataType="viewModels:SettingsViewModel">
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:SettingsWindowViewModel />
+        <vm:SettingsViewModel />
     </Design.DataContext>
     <Grid Margin="20">
         <Grid RowDefinitions="*,*,*,*,*">
