--- a/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Views/MainWindow.xaml
@@ -12,7 +12,7 @@
     Height="680"
     MinWidth="400"
     MinHeight="680"
-    d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
+    d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
     Icon="pack://application:,,,/Images/Icons/book(1).png"
     ResizeMode="CanResize"
     mc:Ignorable="d">
