--- a/Posetrix/Views/WIndows/FoldersAddWindow.xaml
+++ b/Posetrix/Views/WIndows/FoldersAddWindow.xaml
@@ -13,7 +13,7 @@
     Height="400"
     MinWidth="600"
     MinHeight="400"
-    d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
+    d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
     mc:Ignorable="d">
     <Grid Margin="20">
         <Grid.RowDefinitions>
