--- a/Posetrix/Views/WIndows/SessionWindow.xaml
+++ b/Posetrix/Views/WIndows/SessionWindow.xaml
@@ -11,7 +11,7 @@
     Title="{Binding WindowTitle}"
     Width="600"
     Height="450"
-    d:DataContext="{d:DesignInstance Type=viewmodels:SessionWindowViewModel}"
+    d:DataContext="{d:DesignInstance Type=viewmodels:SessionViewModel}"
     mc:Ignorable="d">
     <Window.Resources>
         <Style
