--- a/Posetrix/Views/WIndows/SettingsWindow.xaml
+++ b/Posetrix/Views/WIndows/SettingsWindow.xaml
@@ -11,7 +11,7 @@
     Height="400"
     MinWidth="480"
     MinHeight="400"
-    d:DataContext="{d:DesignInstance Type=viewmodels:SettingsWindowViewModel}"
+    d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
     mc:Ignorable="d">
     <Grid Margin="20" ShowGridLines="False">
         <Grid.RowDefinitions>
