--- a/Posetrix/Views/WIndows/SessionWindow.xaml
+++ b/Posetrix/Views/WIndows/SessionWindow.xaml
@@ -69,7 +69,7 @@
                 <Button.ToolTip>
                     <ToolTip>
                         <TextBlock
-                            FontFamily="Segoe UI"
+                            FontFamily="{StaticResource SegoeUi}"
                             FontSize="12"
                             Text="Always on top" />
                     </ToolTip>
