--- a/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Views/MainWindow.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:core="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Posetrix"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:usercontrols="clr-namespace:Posetrix.Views.UserControls"
     Title="{Binding WindowTitle}"
@@ -13,7 +12,7 @@
     MinWidth="400"
     MinHeight="680"
     d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
-    Icon="pack://application:,,,/Images/Icons/book(1).png"
+    Icon="pack://application:,,,/Assets/Images/Icons/book(1).png"
     ResizeMode="CanResize"
     mc:Ignorable="d">
     <Window.Resources>
@@ -50,7 +49,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Button
-                    Name="openSettingsWindowButton"
+                    Name="OpenSettingsWindowButton"
                     Grid.Column="0"
                     Width="28"
                     Height="28"
@@ -78,7 +77,7 @@
             </Grid>
 
             <Button
-                Name="addReferencesButton"
+                Name="AddReferencesButton"
                 Grid.Row="1"
                 Height="46"
                 Margin="0,10"
