--- a/Posetrix.Avalonia/Views/MainWindow.axaml
+++ b/Posetrix.Avalonia/Views/MainWindow.axaml
@@ -15,10 +15,6 @@
         Height="600"
         MinWidth="400"
         MinHeight="600">
-
-    <!-- <Design.DataContext> -->
-    <!--     <vm:MainWindowViewModel /> -->
-    <!-- </Design.DataContext> -->
     <Window.DataTemplates>
         <!--  Template for dynamic custom views display  -->
         <DataTemplate DataType="{x:Type vm:CustomIntervalViewModel}">
@@ -33,7 +29,9 @@
             <Grid RowDefinitions="*,*,*">
                 <Grid ColumnDefinitions="*,*">
                     <!-- Open settings button -->
-                    <Button Grid.Column="0" Click="OpenSettingsButton_OnClick" Name="OpenSettingsButton"
+                    <Button Grid.Column="0"
+                            Click="OpenSettingsButton_OnClick"
+                            Name="OpenSettingsButton"
                             Classes="transparent icon">
                         <lucideAvalonia:Lucide Icon="Settings" Height="20"
                                                StrokeBrush="{DynamicResource SystemControlForegroundBaseHighBrush}">
@@ -42,11 +40,16 @@
                     <TextBlock Grid.Column="1" FontFamily="{StaticResource UbuntuFont}">Add your reference images</TextBlock>
                 </Grid>
                 <!-- Add folder button -->
-                <Button Grid.Row="1" Name="AddFolderButton" Click="AddFolderButton_OnClick" Height="46"
-                        HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"
-                        VerticalContentAlignment="Center" Margin="0 10">
+                <Button Grid.Row="1" Name="AddFolderButton"
+                        Click="AddFolderButton_OnClick"
+                        Classes="accent-button"
+                        Height="46"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center"
+                        Margin="0 10">
                     <lucideAvalonia:Lucide Icon="Plus" StrokeThickness="1.5"
-                                           StrokeBrush="{DynamicResource SystemControlForegroundBaseHighBrush}">
+                                           StrokeBrush="{DynamicResource AccentButtonForeground}">
                     </lucideAvalonia:Lucide>
                     <!-- <svg:Svg Path="avares://Posetrix.Avalonia/Assets/Icons/settings.svg" Width="28" Height="28"/> -->
                 </Button>
@@ -67,7 +70,7 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <!-- TODO: Add controls switch -->
+                <!-- Controls switch. -->
                 <ContentControl Grid.Row="2" Content="{Binding SelectedViewModel.ViewModelObject}" />
             </Grid>
             <UniformGrid Grid.Row="2">
@@ -78,8 +81,12 @@
                 <TextBlock Text="Shuffle images" VerticalAlignment="Center"></TextBlock>
                 <CheckBox IsChecked="{Binding IsShuffleEnabled}"></CheckBox>
             </UniformGrid>
-            <Button Grid.Row="4" Name="StartNewSession" Click="StartNewSession_OnClick" HorizontalAlignment="Stretch"
-                    Height="46" Content="Start a drawing session"
+            <!-- Starting session button. -->
+            <Button Classes="accent-button" Grid.Row="4" Name="StartNewSession"
+                    Click="StartNewSession_OnClick"
+                    HorizontalAlignment="Stretch"
+                    Height="46"
+                    Content="Start a drawing session"
                     VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
             </Button>
         </Grid>
