style(avalonia): add style for custom font

--- a/Posetrix.Avalonia/App.axaml
+++ b/Posetrix.Avalonia/App.axaml
@@ -9,7 +9,7 @@
         <local:ViewLocator />
     </Application.DataTemplates>
     <Application.Resources>
-        <FontFamily x:Key="UbuntuFont">avares://Posetrix.Avalonia/Assets/Fonts#Ubuntu</FontFamily>
+        <FontFamily x:Key="CustomTextFont">avares://Posetrix.Avalonia/Assets/Fonts#Ubuntu</FontFamily>
     </Application.Resources>
     <Application.Styles>
         <FluentTheme>
