--- a/Posetrix.Avalonia/Views/MainWindow.axaml
+++ b/Posetrix.Avalonia/Views/MainWindow.axaml
@@ -3,7 +3,6 @@
         xmlns:vm="using:Posetrix.Core.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:svg="using:Avalonia.Svg"
         xmlns:lucideAvalonia="clr-namespace:LucideAvalonia;assembly=LucideAvalonia"
         xmlns:cc="using:Posetrix.Avalonia.Controls"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
@@ -25,9 +24,9 @@
         </DataTemplate>
     </Window.DataTemplates>
     <Grid Margin="20">
-        <Grid RowDefinitions="Auto, 4*, 2*, 2*, Auto" ShowGridLines="True">
+        <Grid RowDefinitions="Auto, *, *, *, Auto" ShowGridLines="True">
             <Grid RowDefinitions="*,*,*">
-                <Grid ColumnDefinitions="*,*">
+                <Grid ColumnDefinitions="Auto,*">
                     <!-- Open settings button -->
                     <Button Grid.Column="0"
                             Click="OpenSettingsButton_OnClick"
@@ -37,7 +36,8 @@
                                                StrokeBrush="{DynamicResource SystemControlForegroundBaseHighBrush}">
                         </lucideAvalonia:Lucide>
                     </Button>
-                    <TextBlock Grid.Column="1" FontFamily="{StaticResource UbuntuFont}">Add your reference images</TextBlock>
+                    <TextBlock Grid.Column="1" Text="Add your reference images" Margin="-20 0 0 0"
+                               HorizontalAlignment="Center" />
                 </Grid>
                 <!-- Add folder button -->
                 <Button Grid.Row="1" Name="AddFolderButton"
@@ -51,9 +51,8 @@
                     <lucideAvalonia:Lucide Icon="Plus" StrokeThickness="1.5"
                                            StrokeBrush="{DynamicResource AccentButtonForeground}">
                     </lucideAvalonia:Lucide>
-                    <!-- <svg:Svg Path="avares://Posetrix.Avalonia/Assets/Icons/settings.svg" Width="28" Height="28"/> -->
                 </Button>
-                <TextBlock Grid.Row="2" HorizontalAlignment="Center" Text="Folders: 0 Files: 0"></TextBlock>
+                <TextBlock Grid.Row="2" HorizontalAlignment="Center" Text="{Binding FoldersInfo}"></TextBlock>
             </Grid>
             <!-- Custom controls combobox -->
             <Grid Grid.Row="1" RowDefinitions="*,*,*">
@@ -77,6 +76,7 @@
                 <TextBlock Text="I want to draw" VerticalAlignment="Center"></TextBlock>
                 <TextBox Text="0" VerticalAlignment="Center"></TextBox>
             </UniformGrid>
+            <!-- Shuffle images. -->
             <UniformGrid Grid.Row="3">
                 <TextBlock Text="Shuffle images" VerticalAlignment="Center"></TextBlock>
                 <CheckBox IsChecked="{Binding IsShuffleEnabled}"></CheckBox>
